--- a/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
+++ b/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
@@ -43,19 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/morpheus/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "import cudf\n",
+    "from cudf.core.subword_tokenizer import SubwordTokenizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
     "import binary_sequence_classifier\n",
@@ -91,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "if not os.path.isfile(\"smsspamcollection.zip\"):    \n",
@@ -103,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "if not os.path.isfile(\"SMSSpamCollection\"):\n",
@@ -202,10 +202,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -241,28 +241,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.78s/it]"
+      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.13s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.09204745624946165\n"
+      "Train loss: 0.08557508708659693\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 2/2 [01:11<00:00, 35.92s/it]"
+      "Epoch: 100%|██████████| 2/2 [01:11<00:00, 35.71s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.01900260798949083\n"
+      "Train loss: 0.01811961470645786\n"
      ]
     },
     {
@@ -283,8 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save model file and configuration file in a directory\n",
-    "seq_classifier.save_model(\"./phish-bert-model\")"
+    "# save as pytorch model\n",
+    "torch.save(seq_classifier._model.module, \"phishing-bert.pt\")"
    ]
   },
   {
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99375"
+       "0.9919642857142857"
       ]
      },
      "execution_count": 13,
@@ -345,7 +345,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9729729729729729"
+       "0.9605263157894737"
       ]
      },
      "execution_count": 15,
@@ -357,6 +357,59 @@
     "tests = test_preds[0].to_numpy()\n",
     "true_labels = y_test.to_numpy()\n",
     "f1_score(true_labels, tests)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Export Model to ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = SubwordTokenizer(\"./resources/bert-base-uncased-hash.txt\", do_lower_case=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer_output = tokenizer(df[\"message\"][0:3],\n",
+    "                                max_length=128,\n",
+    "                                max_num_rows=3,\n",
+    "                                truncation=True,\n",
+    "                                add_special_tokens=True,\n",
+    "                                return_tensors=\"pt\")\n",
+    "\n",
+    "sample_model_input = (tokenizer_output[\"input_ids\"], tokenizer_output[\"attention_mask\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.onnx.export(seq_classifier._model.module,              \n",
+    "                  sample_model_input,               \n",
+    "                  \"model.onnx\",                                      # where to save the model\n",
+    "                  export_params=True,                                # store the trained parameter weights inside the model file\n",
+    "                  opset_version=10,                                  # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,                          # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input_ids','attention_mask'],      # the model's input names\n",
+    "                  output_names = ['output'],                         # the model's output names\n",
+    "                  dynamic_axes={'input_ids' : {0 : 'batch_size'},    # variable length axes\n",
+    "                                'attention_mask': {0: 'batch_size'}, \n",
+    "                                'output' : {0 : 'batch_size'}})"
    ]
   },
   {
@@ -418,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9 (default, Jan 26 2021, 15:33:00) \n[GCC 8.4.0]"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
