more sid and phishing updates

--- a/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
+++ b/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
@@ -241,28 +241,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.13s/it]"
+      "Epoch:  50%|█████     | 1/2 [00:34<00:34, 34.08s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.08557508708659693\n"
+      "Train loss: 0.07317519100782062\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 2/2 [01:11<00:00, 35.71s/it]"
+      "Epoch: 100%|██████████| 2/2 [01:09<00:00, 34.79s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.01811961470645786\n"
+      "Train loss: 0.015208904994817982\n"
      ]
     },
     {
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9919642857142857"
+       "0.99375"
       ]
      },
      "execution_count": 13,
@@ -345,7 +345,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9605263157894737"
+       "0.9731543624161074"
       ]
      },
      "execution_count": 15,
@@ -390,7 +390,7 @@
     "                                add_special_tokens=True,\n",
     "                                return_tensors=\"pt\")\n",
     "\n",
-    "sample_model_input = (tokenizer_output[\"input_ids\"], tokenizer_output[\"attention_mask\"])"
+    "sample_model_input = (tokenizer_output[\"input_ids\"].type(torch.long), tokenizer_output[\"attention_mask\"].type(torch.long))"
    ]
   },
   {
