--- a/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
+++ b/models/training-tuning-scripts/phishing-models/phish-bert-training.ipynb
@@ -52,11 +52,12 @@
     "from cudf.core.subword_tokenizer import SubwordTokenizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
-    "import binary_sequence_classifier\n",
+    "from sequence_classifier import SequenceClassifier\n",
     "import requests\n",
     "import os.path\n",
     "import torch\n",
     "import numpy as np\n",
+    "import sys\n",
     "\n",
     "from morpheus.utils.seed import manual_seed"
    ]
@@ -137,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df = cudf.read_csv(\"SMSSpamCollection\", delimiter='\\t', header=None, names=['spam/ham', 'message'])"
@@ -146,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# convert label to binary 0 = ham, 1 = spam\n",
@@ -170,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "random_seed=42"
@@ -179,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(df[\"message\"], df[\"label\"], train_size=0.8,random_state=random_seed)"
@@ -196,13 +205,15 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
@@ -211,8 +222,7 @@
     }
    ],
    "source": [
-    "seq_classifier = binary_sequence_classifier.BinarySequenceClassifier()\n",
-    "seq_classifier.init_model(\"bert-base-uncased\")"
+    "seq_classifier = SequenceClassifier(\"bert-base-uncased\", hash_file=\"../../../morpheus/data/bert-base-uncased-hash.txt\", num_labels=2)"
    ]
   },
   {
@@ -225,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# set seeds for model reproducability\n",
@@ -235,34 +247,36 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 1/2 [00:34<00:34, 34.08s/it]"
+      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.15s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.07317519100782062\n"
+      "Train loss: 0.09863031564080822\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 2/2 [01:09<00:00, 34.79s/it]"
+      "Epoch: 100%|██████████| 2/2 [01:11<00:00, 35.53s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.015208904994817982\n"
+      "Train loss: 0.02380475093460908\n"
      ]
     },
     {
@@ -280,11 +294,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# save as pytorch model\n",
-    "torch.save(seq_classifier._model.module, \"phishing-bert.pt\")"
+    "torch.save(seq_classifier._model, \"phishing-bert.pt\")"
    ]
   },
   {
@@ -304,12 +320,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.99375"
+       "0.9901785714285715"
       ]
      },
      "execution_count": 13,
@@ -324,8 +342,19 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/efajardo/miniconda3/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "test_preds = seq_classifier.predict(X_test, batch_size=128)"
    ]
@@ -340,12 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9731543624161074"
+       "0.9636963696369636"
       ]
      },
      "execution_count": 15,
@@ -354,7 +385,7 @@
     }
    ],
    "source": [
-    "tests = test_preds[0].to_numpy()\n",
+    "tests = test_preds.to_numpy()\n",
     "true_labels = y_test.to_numpy()\n",
     "f1_score(true_labels, tests)"
    ]
@@ -371,16 +402,20 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "tokenizer = SubwordTokenizer(\"./resources/bert-base-uncased-hash.txt\", do_lower_case=True)"
+    "tokenizer = SubwordTokenizer(\"../../../morpheus/data/bert-base-uncased-hash.txt\", do_lower_case=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tokenizer_output = tokenizer(df[\"message\"][0:3],\n",
@@ -396,10 +431,12 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "torch.onnx.export(seq_classifier._model.module,              \n",
+    "torch.onnx.export(seq_classifier._model,              \n",
     "                  sample_model_input,               \n",
     "                  \"model.onnx\",                                      # where to save the model\n",
     "                  export_params=True,                                # store the trained parameter weights inside the model file\n",
@@ -471,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
