--- a/models/training-tuning-scripts/phishing-models/phish_bert_training.ipynb
+++ b/models/training-tuning-scripts/phishing-models/phish_bert_training.ipynb
@@ -52,14 +52,15 @@
     "from cudf.core.subword_tokenizer import SubwordTokenizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
-    "from sequence_classifier import SequenceClassifier\n",
     "import requests\n",
     "import os.path\n",
     "import torch\n",
     "import numpy as np\n",
     "import sys\n",
     "\n",
-    "from morpheus.utils.seed import manual_seed"
+    "from morpheus.utils.seed import manual_seed\n",
+    "\n",
+    "from common.sequence_classifier import SequenceClassifier"
    ]
   },
   {
@@ -213,10 +214,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -255,28 +256,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  50%|█████     | 1/2 [00:35<00:35, 35.15s/it]"
+      "Epoch:  50%|█████     | 1/2 [00:33<00:33, 33.81s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.09863031564080822\n"
+      "Train loss: 0.08998454025214804\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 2/2 [01:11<00:00, 35.53s/it]"
+      "Epoch: 100%|██████████| 2/2 [01:08<00:00, 34.42s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.02380475093460908\n"
+      "Train loss: 0.015057251792833475\n"
      ]
     },
     {
@@ -327,7 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9901785714285715"
+       "0.99375"
       ]
      },
      "execution_count": 13,
@@ -350,7 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/efajardo/miniconda3/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
+      "/opt/conda/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -376,7 +377,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9636963696369636"
+       "0.9767441860465117"
       ]
      },
      "execution_count": 15,
@@ -508,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
